apps/n8n/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
    spec:
      containers:
        - name: n8n
          image: n8nio/n8n:1.101.1
          ports:
            - containerPort: 5678
          volumeMounts:
            - name: data-volume
              mountPath: /home/node/.n8n
              subPath: n8n
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: data-pvc
